# dash-component-boilerplate

./: .bashrc  Dockerfile.dev  README.md  docker-compose.dev.yml  entrypoint.dev.sh  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
{{cookiecutter.project_shortname}}/: =1.15.0  README.md  docker-compose.dev.yml  entrypoint.dev.sh  package.json  pyproject.toml
{{cookiecutter.project_shortname}}/scripts/: lint_apply.sh  lint_check.sh
