[tool.poetry]
name = "Boilerplate"
version = "0.1.0"
description = ""
authors = ["Sean McCarthy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.4"
cookiecutter = "^2.6.0"
pytest-cookies = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
